fixed writeWavFile's header bug

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,8 @@
             "group": {
                 "isDefault": true,
                 "kind": "build"
-            }
+            },
+            "problemMatcher": []
         },
         {
             "label": "build noisemakerTests",
