--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,26 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "run noisemakerTests",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/noisemakerTests",
+            "preLaunchTask": "build noisemakerTests",
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        
+        {
             "name": "g++ debug fileFuncTests",
             "type": "cppdbg",
             "request": "launch",
