--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,4 +1,5 @@
 {
+    "version": "2.0.0",
     "tasks": [
         {
             "label": "build noisemakerTests",
@@ -15,12 +16,29 @@
                 "src/noisemaker.cpp",
                 "src/multiplier.cpp"
             ],
+            "group": "build",
+            "problemMatcher": []
+        },
+        {
+            "label": "build megalovania",
+            "type": "shell",
+            "command": "/usr/bin/g++",
+            "args": [
+                "-g",
+                "-I",
+                "src",
+                "-o",
+                "megalovania",
+                "tests/megalovania.cpp",
+                "src/fileFuncs.cpp",
+                "src/noisemaker.cpp",
+                "src/multiplier.cpp"
+            ],
             "group": {
                 "isDefault": true,
                 "kind": "build"
             },
             "problemMatcher": []
         }
-    ],
-    "version": "2.0.0"
+    ]
 }
