--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,11 @@ cmake_minimum_required (VERSION 3.8)
 
 project ("Noisemaker")
 
+set(CMAKE_BUILD_TYPE Debug)
+
 # Add the cmake folder so the FindSphinx module is found
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 
 add_subdirectory ("src")
 add_subdirectory ("docs")
+add_subdirectory ("tests")
