--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories("${PROJECT_SOURCE_DIR}/src")
+include_directories("${PROJECT_SOURCE_DIR}/include" "${PROJECT_SOURCE_DIR}/src")
 link_libraries(Noisemaker)
 add_executable (NoisemakerTests "noisemakerTests.cpp")
 add_executable (Megalovania "megalovania.cpp")
